Sat Jul 03 19:40:23 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/date.c: updated reusing macros

Tue Jun 29 08:37:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/convert_error.c:
	- fix test

Mon Jun 28 01:22:12 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c src/tds/config.c applied patches from Christos
	* doc/userguide.sgml small updates and clarifications.

Fri Jun 25 21:41:36 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix -Bsymbolic option detect

Fri Jun 25 17:42:40 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix problem linking in HP-UX and Mac OS X

Sat Jun 19 01:53:01 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c src/apps/freebcp.h
	* src/dblib/bcp.c src/dblib/dblib.c
	- fixed warnings, and some cleanup

Thu Jun 17 17:38:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/dblib.h include/sybdb.h include/tds.h:
	* src/apps/freebcp.c src/apps/freebcp.h src/ctlib/blk.c:
	* src/dblib/bcp.c src/dblib/dblib.c:
	- applied Bill Thompson patch on dblib
	 - This patch contains my rework of the dblibrary bcp api, 
	 - and also enhancements to freebcp.
	 - As a by-product, I also enhanced dbbind/dbnullbind
	
Tue Jun 15 15:15:06 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/server/login.c:
	- fix compile error on HP-UX 11.00

Tue Jun 15 13:45:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am src/server/Makefile.am src/tds/Makefile.am:
	* src/tds/libgcc.la.in(added):
	- include libgcc statically if needed
	- try to fix *BSD linking problem

Mon Jun 14 20:35:43 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/bsqldb.txt doc/defncopy.txt
	* doc/userguide.sgml
	- added man pages for bsqldb and defncopy

Sun Jun 13 19:35:43 EDT 2004	JK Lowden <jklowden@schemamania.org>